infrastructure-local/flux-system/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-ui
  namespace: flux-system
  labels:
    app.kubernetes.io/instance: capacitor
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx  
  rules:
  - host: flux.local.com
    http:
      paths:
      - backend:
          service:
            name: capacitor
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-ui
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
